fix: Update should only affect email/address
